--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros</title>
+    <title>Gestoría Vehicular CDMX, Chalco y Edomex | Trámites Rápidos</title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
     <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description"
-        content="Gestoría vehicular #1 en CDMX y Edomex. Placas, Cambio de Propietario, Legalización de Autos Americanos y Licencias. ¡Trámites sin filas y 100% seguros!">
+        content="Gestoría vehicular #1 en CDMX, Chalco, Huixquilucan, Interlomas y todo el Estado de México. Placas, Cambio de Propietario, Legalización y Licencias.">
     <meta name="keywords"
-        content="gestoria vehicular cdmx, alta de placas cdmx, cambio de propietario edomex, gestor de autos, tramites vehiculares, reemplacamiento, tarjeta de circulacion">
+        content="gestoria vehicular cdmx, gestoria chalco, gestoria huixquilucan, gestoria interlomas, estado de mexico, placas edomex, cambio de propietario edomex, legalizacion autos">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros">
+    <meta property="og:title" content="Gestoría Vehicular CDMX, Chalco y Edomex | Trámites Rápidos">
     <meta property="og:description"
-        content="Gestoría vehicular experta en CDMX y Edomex. Alta de placas, cambio de propietario y licencias sin filas ni estrés.">
+        content="Servicio experto en Chalco, Huixquilucan, Interlomas y todo Edomex. Alta de placas y trámites vehiculares sin filas.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
     <link rel="apple-touch-icon" href="assets/images/logo.jpg">
     <meta name="theme-color" content="#ffffff">
@@ -69,6 +69,17 @@
         "opens": "09:00",
         "closes": "18:00"
       },
+      "areaServed": [
+        "Ciudad de México",
+        "Estado de México",
+        "Chalco",
+        "Huixquilucan",
+        "Interlomas",
+        "Morelos",
+        "Guerrero",
+        "Michoacán",
+        "Oaxaca"
+      ],
       "priceRange": "$$",
       "aggregateRating": {
         "@type": "AggregateRating",
@@ -81,7 +92,12 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet"
+        media="print" onload="this.media='all'">
+    <noscript>
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap">
+    </noscript>
 
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -125,9 +141,8 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">Gestoría Vehicular CDMX y Edomex: <br
-                            class="hidden-mobile"><span style="font-weight: 400; font-size: 0.8em;">¡Pon tus trámites
-                            sobre
-                            ruedas!</span></h1>
+                            class="hidden-mobile"><span style="font-weight: 400; font-size: 0.8em;">Chalco, Huixquilucan
+                            e Interlomas</span></h1>
                     <p><strong>¿Moto o Auto nuevos?</strong> Olvídate de filas y estrés. Somos Expertos en altas, bajas,
                         legalización y cambios de propietario en la Zona Metropolitana entre otros estados de la
                         república.</p>
@@ -143,7 +158,7 @@
                     </div>
 
                     <div class="hero-trust-text">
-                        <h3>¿Por qué elegirnos?</h3>
+                        <h2>¿Por qué elegirnos?</h2>
                         <p>Más de 5 años simplificando la vida de los conductores mexicanos.</p>
                     </div>
 
@@ -165,8 +180,9 @@
 
                 <div class="hero-visual hidden-mobile">
                     <!-- Overlapping composition -->
-                    <img src="assets/images/moto-deportiva-azul.png" alt="Moto Deportiva Gestor de Autos"
-                        class="hero-moto" fetchpriority="high" width="600" height="400">
+                    <img src="assets/images/moto-deportiva-azul.png"
+                        alt="Gestor de Autos en Moto Deportiva - Trámites Rápidos" class="hero-moto"
+                        fetchpriority="high" width="600" height="400">
                 </div>
             </div>
             </div>
@@ -185,18 +201,20 @@
                     <div class="partners-slider">
                         <div class="partners-track">
                             <!-- Set 1 -->
-                            <img src="assets/images/partners/cdmx.png" alt="Gobierno CDMX" loading="lazy" width="60"
+                            <img src="assets/images/partners/cdmx.png"
+                                alt="Gobierno Ciudad de México - Trámites Vehiculares" loading="lazy" width="60"
                                 height="60">
-                            <img src="assets/images/partners/edomex.png" alt="Gobierno Estado de México" loading="lazy"
-                                width="60" height="60">
-                            <img src="assets/images/partners/morelos.png" alt="Gobierno Morelos" loading="lazy"
-                                width="60" height="60">
-                            <img src="assets/images/partners/guerrero.png" alt="Gobierno Guerrero" loading="lazy"
-                                width="60" height="60">
-                            <img src="assets/images/partners/michoacan.png" alt="Gobierno Michoacán" loading="lazy"
-                                width="60" height="60">
-                            <img src="assets/images/partners/oaxaca.png" alt="Gobierno Oaxaca" loading="lazy" width="60"
+                            <img src="assets/images/partners/edomex.png"
+                                alt="Gobierno Estado de México - Tenencia y Placas" loading="lazy" width="60"
                                 height="60">
+                            <img src="assets/images/partners/morelos.png" alt="Gobierno Morelos - Altas y Bajas"
+                                loading="lazy" width="60" height="60">
+                            <img src="assets/images/partners/guerrero.png" alt="Gobierno Guerrero - Permisos"
+                                loading="lazy" width="60" height="60">
+                            <img src="assets/images/partners/michoacan.png" alt="Gobierno Michoacán - Gestoría"
+                                loading="lazy" width="60" height="60">
+                            <img src="assets/images/partners/oaxaca.png" alt="Gobierno Oaxaca - Trámites" loading="lazy"
+                                width="60" height="60">
 
                             <!-- Set 2 (Duplicate for Loop) -->
                             <img src="assets/images/partners/cdmx.png" alt="Gobierno CDMX" loading="lazy" width="60"
@@ -465,7 +483,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+1&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 1" loading="lazy">
+                                        alt="Cliente satisfecho con alta de placas CDMX" loading="lazy">
                                     <span>Cliente 1</span>
                                 </div>
                                 <div class="verified-badge">
@@ -490,7 +508,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+2&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 2" loading="lazy">
+                                        alt="Cliente recomendando cambio de propietario Edomex" loading="lazy">
                                     <span>Cliente 2</span>
                                 </div>
                                 <div class="verified-badge">
@@ -515,7 +533,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+3&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 3" loading="lazy">
+                                        alt="Testimonio real legalización de autos" loading="lazy">
                                     <span>Cliente 3</span>
                                 </div>
                                 <div class="verified-badge">
@@ -539,7 +557,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+4&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 4" loading="lazy">
+                                        alt="Reseña verificada gestión vehicular" loading="lazy">
                                     <span>Cliente 4</span>
                                 </div>
                                 <div class="verified-badge">
@@ -564,7 +582,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+5&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 5" loading="lazy">
+                                        alt="Cliente feliz con placas de auto antiguo" loading="lazy">
                                     <span>Cliente 5</span>
                                 </div>
                                 <div class="verified-badge">
@@ -639,7 +657,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+8&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 8" loading="lazy">
+                                        alt="Usuario recomendando Gestor de Autos" loading="lazy">
                                     <span>Cliente 8</span>
                                 </div>
                                 <div class="verified-badge">
@@ -663,7 +681,7 @@
                             <div class="review-footer">
                                 <div class="review-author">
                                     <img src="https://ui-avatars.com/api/?name=Cliente+9&background=2563eb&color=fff&size=40"
-                                        alt="Foto de perfil de Cliente 9" loading="lazy">
+                                        alt="Cliente satisfecho con entrega a domicilio" loading="lazy">
                                     <span>Cliente 9</span>
                                 </div>
                                 <div class="verified-badge">
