--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestoría Vehicular CDMX, Chalco y Edomex | Trámites Rápidos</title>
+    <title>Gestoría Vehicular CDMX, Chalco, Huixquilucan, Interlomas y EdoMex</title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
-    <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon" sizes="any">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description"
