--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestoría Vehicular CDMX, Chalco, Huixquilucan, Interlomas y EdoMex</title>
+    <title>Gestoría Vehicular Chalco, Huixquilucan e Interlomas | Placas Edomex Sin Filas</title>
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
     <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon" sizes="any">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description"
-        content="Gestoría vehicular #1 en CDMX, Chalco, Huixquilucan, Interlomas y todo el Estado de México. Placas, Cambio de Propietario, Legalización y Licencias.">
+        content="¿Auto Nuevo? Tramita tu Permiso de Guerrero 2026 y Licencia Permanente CDMX. Gestoría vehicular experta en Chalco, Huixquilucan e Interlomas. ¡Sin filas!">
     <meta name="keywords"
-        content="gestoria vehicular cdmx, gestoria chalco, gestoria huixquilucan, gestoria interlomas, estado de mexico, placas edomex, cambio de propietario edomex, legalizacion autos">
+        content="auto nuevo permiso, permiso provisional auto nuevo, licencia permanente cdmx, permiso guerrero 2026, gestoria vehicular cdmx, gestoria chalco, gestoria interlomas, placas edomex">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestoría Vehicular CDMX, Chalco y Edomex | Trámites Rápidos">
+    <meta property="og:title" content="Gestoría Vehicular Chalco, Huixquilucan e Interlomas | Permisos y Licencias">
     <meta property="og:description"
-        content="Servicio experto en Chalco, Huixquilucan, Interlomas y todo Edomex. Alta de placas y trámites vehiculares sin filas.">
+        content="¿Estrenas Auto? Tramita tu Permiso Provisional 2026 y Licencia Permanente sin filas. Gestoría segura en CDMX y EdoMex.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
     <link rel="apple-touch-icon" href="assets/images/logo.jpg">
     <meta name="theme-color" content="#ffffff">
@@ -29,9 +29,9 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros">
+    <meta property="twitter:title" content="Gestoría Vehicular Chalco y Edomex | Placas Sin Filas">
     <meta property="twitter:description"
-        content="Olvídate de las filas. Gestionamos tus trámites vehiculares en CDMX y Edomex de forma rápida y segura.">
+        content="Olvídate de las filas. Gestión experta en Chalco, Huixquilucan e Interlomas. Placas y trámites rápidos y seguros.">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -85,7 +85,23 @@
         "@type": "AggregateRating",
         "ratingValue": "5.0",
         "reviewCount": "127"
-      }
+      },
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Licencia Permanente Tipo A CDMX"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Permiso Provisional de Guerrero 2026"
+          }
+        }
+      ]
     }
     </script>
 
@@ -735,6 +751,75 @@
                     <p class="verify-text">✓ Verifica por ti mismo - 100% reseñas auténticas</p>
                 </div>
             </div>
+            </div>
+        </section>
+        </section>
+
+        <!-- New Trámites Garantizados Section -->
+        <section class="section-padding tramites-section">
+            <div class="container">
+                <h2 class="section-heading">TRÁMITES GARANTIZADOS</h2>
+
+                <div class="tramites-grid">
+                    <!-- Permiso Card -->
+                    <div class="tramite-card">
+                        <h3 class="tramite-title">Permiso vehicular</h3>
+                        <div class="tramite-image">
+                            <img src="assets/images/permiso_2026.png"
+                                alt="Permiso Provisional Guerrero 2026 Uso Demostrativo" loading="lazy">
+                        </div>
+                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
+
+                        <h4 class="tramite-subtitle">Tipos de permiso</h4>
+                        <p class="tramite-desc">
+                            PERMISO PROVISIONAL POR 30 DÍAS PARA CIRCULAR SIN PLACAS Y SIN TARJETA DE CIRCULACIÓN
+                        </p>
+
+                        <div class="tramite-btn-container">
+                            <a href="https://wa.me/525535757364?text=Acabo%20de%20comprar%20auto%20y%20necesito%20permiso"
+                                class="btn btn-whatsapp-full">
+                                <i class="fas fa-car-sparkles"></i> ¿Auto Nuevo? Tramita aquí
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Licencia Card -->
+                    <div class="tramite-card">
+                        <h3 class="tramite-title">Licencia vehicular</h3>
+                        <div class="tramite-image">
+                            <img src="assets/images/licencia_morada.png" alt="Licencia Permanente Tipo A Morada"
+                                loading="lazy" style="max-width: 280px;">
+                        </div>
+                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
+
+                        <h4 class="tramite-subtitle">Requisitos</h4>
+                        <ul class="requirements-list">
+                            <li class="req-item">
+                                <strong>CURP</strong>
+                                <span>(1 copia)</span>
+                            </li>
+                            <li class="req-item">
+                                <strong>Identificación Oficial</strong>
+                                <span>(1 copia)</span>
+                            </li>
+                            <li class="req-item">
+                                <strong>Comprobante de domicilio</strong>
+                                <span>(1 copia)</span>
+                            </li>
+                        </ul>
+
+                        <h4 class="tramite-subtitle">Tipos de licencia</h4>
+                        <div style="display: flex; gap: 2rem; flex-wrap: wrap; justify-content: center;">
+                            <div style="max-width: 250px; text-align: center;">
+                                <strong
+                                    style="display: block; color: #475569; margin-bottom: 0.5rem; font-size: 1.1rem;">LICENCIA
+                                    DE AUTOMOVILISTA (A)</strong>
+                                <p style="font-size: 0.9rem; color: #64748b;">Vehículos de motor destinados al uso
+                                    exclusivo particular.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
