--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="keywords"
         content="auto nuevo permiso, permiso provisional auto nuevo, licencia permanente cdmx, permiso guerrero 2026, gestoria vehicular cdmx, gestoria chalco, gestoria interlomas, placas edomex">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="d2EckAkRF5uJ8I1-9sY4JRgDJ7gYxpGV7pLnztUAxLQ">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
 
     <!-- Open Graph / Facebook -->
